Closed
Bug 951979
Opened 9 years ago
Closed 9 years ago
Assertion failure: compilationLockOwner != PR_GetCurrentThread(), at vm/Runtime.cpp:997
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
VERIFIED
FIXED
mozilla29
People
(Reporter: gkw, Assigned: bhackett1024)
Details
(Keywords: assertion, regression)
Attachments
(2 files)
35.03 KB,
text/plain
|
Details | |
2.86 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
Assertion failure: compilationLockOwner != PR_GetCurrentThread(), at vm/Runtime.cpp is an assertion that has hard-to-reproduce testcases, and which appeared fairly recently (probably in the past weeks?). Not sure where this lives, setting needinfo? from jandem in case he has any ideas. :)
Flags: needinfo?(jdemooij)
Comment 1•9 years ago
|
||
Brian, do you have any idea what's going on?
Flags: needinfo?(jdemooij) → needinfo?(bhackett1024)
Comment 2•9 years ago
|
||
I think the problem is GlobalObject::addIntrinsicValue taking the compilation lock, and then we try to take the operationCallbackLock as well.
Assignee | ||
Comment 3•9 years ago
|
||
I don't think there is any place we take the compilation lock while holding the operation callback lock, so we can just fixup the lock ordering constraints.
Assignee: nobody → bhackett1024
Attachment #8350311 -
Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Comment 4•9 years ago
|
||
Comment on attachment 8350311 [details] [diff] [review] patch Review of attachment 8350311 [details] [diff] [review]: ----------------------------------------------------------------- Glad it's this simple.
Attachment #8350311 -
Flags: review?(jdemooij) → review+
Assignee | ||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6296ca67d80b
https://hg.mozilla.org/mozilla-central/rev/6296ca67d80b
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
![]() |
Reporter | |
Comment 7•9 years ago
|
||
I haven't seen this since.
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
Updated•7 years ago
|
Keywords: testcase-wanted
You need to log in
before you can comment on or make changes to this bug.
Description
•