Bug 951979 - Reorder compilation vs. operation callback lock ordering constraints, r=jandem.